--- a/_posts/2024-11-22-1.md
+++ b/_posts/2024-11-22-1.md
@@ -11,10 +11,11 @@ tags:
   - 提高+/省选−
   - 平衡树
   - FHQ Treap
-  - 未完
 words:
+  - 题解：文艺平衡树
   - 树堆
   - 范浩强
+  - 区间操作
 ---
 
 > [例题链接](https://www.luogu.com.cn/problem/P3391)
@@ -23,11 +24,68 @@ words:
 >
 > 其中需要提供以下操作：翻转一个区间，例如原有有序序列是 $5\ 4\ 3\ 2\ 1$，翻转区间是 $[2,4]$ 的话，结果是 $5\ 2\ 3\ 4\ 1$。
 
-## 前置知识：FHQ Treap
+# 前置知识：FHQ Treap
 
 参见[FHQ Treap (无旋 Treap) 详解](/2024/11/21/5/)。
 
-## 例题 AC 代码
+# 平衡树维护区间信息
+
+## 原理
+
+普通平衡树维护的是一个**按照权值有序**的数据结构。
+
+但是，我们也可以用此来维护**区间信息**——让其中的元素按照其在区间里的位置有序即可。更加通俗易懂一点，就是**按照其数组下标有序**。
+
+## 区别与联系
+
+FHQ Treap 中简而言之就是：原本填写权值的地方，全部改成区间下标。
+
+### 分裂
+
+比如说原本的 $split(p,x,l,r)$，表示将树 $p$（以 $p$ 为根节点的树）以 $x$ 为键值分裂为两棵树 $l,r$，使得树 $l$ 中所有节点的权值**小于等于** $x$，树 $r$ 中所有节点的权值**大于** $x$。
+
+***
+
+那么现在维护区间信息时的 $split(p,x,l,r)$ 则是表示：将树 $p$ 维护的区间的前 $x$ 项分裂至树 $l$，剩余的分裂至树 $r$。
+
+#### 参考代码
+
+```cpp
+void split(int p,int x,int &l,int &r){
+    if(p==0)l=r=0;
+    else{
+        down(p);
+        //注意这里的区别
+        if(t[t[p].left].size+1<=x){
+            l=p;
+            split(t[l].right,x-t[t[p].left].size-1,t[l].right,r);
+        }else{
+            r=p;
+            split(t[r].left,x,l,t[r].left);
+        }update(p);
+    }
+}
+```
+
+值得一提的是，$merge(l,r)$ **不需要**改动。
+
+## 插入节点
+
+***这不是例题中的操作。***
+
+在区间末尾增加一个元素 $x$：
+
+```cpp
+void insert(int x){
+    root=merge(root,create(x));
+}
+```
+
+## 区间翻转
+
+类似于线段树，打个懒标记来判断左右子树是否应当交换左右子节点即可。
+
+# 例题 AC 代码
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -142,3 +200,11 @@ int main(){
 }
 ```
 
+# 练习题
+
+* [P2710 数列](https://www.luogu.com.cn/problem/P2710)
+* [P2042 [NOI2005] 维护数列](https://www.luogu.com.cn/problem/P2042)
+
+~~让你们感受一下人性的险恶！！~~
+
+两道 **<span style="color:purple;">省选/NOI−</span>**，反正我是调了 $\text{7h}$，看[代码](/2025/1/21/1/#ac-代码)就能懂了……
