--- a/_posts/2025-01-19-2.md
+++ b/_posts/2025-01-19-2.md
@@ -7,8 +7,10 @@ author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
+  - 未完
   - 题解
-  - Trie树
+  - Trie
+  - 01Trie
   - 普及/提高−
   - 普及+/提高
   - 位运算
@@ -394,9 +396,9 @@ $$
     </div>
 </details>
 
+# 平衡树
 
-
-# 求解前缀中 $\leq x$ 的数
+引入：求前缀中 $\leq x$ 的数的个数。
 
 一眼**权值树状数组**（或平衡树？）。
 
