--- a/_posts/2024-11-21-5.md
+++ b/_posts/2024-11-21-5.md
@@ -17,6 +17,11 @@ words:
   - 树堆
   - 范浩强Treap
   - 题解：普通平衡树
+  - FHQ Treap详解
+  - Split
+  - 分裂树
+  - 无旋式Treap
+  - 无旋Treap
 ---
 
 > [例题链接](https://www.luogu.com.cn/problem/P3369)
