--- a/_posts/2025-01-21-8.md
+++ b/_posts/2025-01-21-8.md
@@ -7,7 +7,6 @@ author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
-  - 未完
   - 题解
   - 省选/NOI−
   - AC 自动机
@@ -217,3 +216,8 @@ words:
 
 # KMP 匹配
 
+使用 KMP 算法代替 AC 自动机/Trie 图即可。
+
+因为 AC 自动机会多带一个 $26$ 的常数。
+
+~~但是我懒得打 KMP 了……~~
