--- a/_posts/2024-12-31-1.md
+++ b/_posts/2024-12-31-1.md
@@ -9,6 +9,7 @@ header-mask: 0.4
 tags:
   - 随机化
   - 时间戳优化
+  - 位运算
 words:
   - scanf()
   - printf()
@@ -28,6 +29,7 @@ words:
   - 位运算
   - random
   - lg[]
+  - 异或
 ---
 
 # 快读快写
@@ -630,5 +632,11 @@ mt19937 Rand(time(0));
    for(int i=1;i<=N;i++)lg[i]=lg[i>>1]+1;
    ```
 
-   
 
+# 常用技巧
+
+## 邻接表下无向边作两条有向边存储时查找反向边
+
+可以从 $2$ 开始存储边，无向边的两条有向边相邻，因此可以使用**异或** $1$ 来查找反向边。
+
+[比如这里](/2025/01/23/3/#无向图转有向图存储下环的误判)。
