--- a/_posts/2025-01-22-7.md
+++ b/_posts/2025-01-22-7.md
@@ -7,13 +7,47 @@ author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
-  - 未完
   - 题解
   - 普及+/提高
+  - DP
+  - 树型 DP
 words:
+  - 树型DP
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P3478)
+
+# 树型 DP
+
+依然是树型 DP。
+
+首先，在根节点确定的情况下，深度之和显然可以 $\mathcal O(n)$ 求。
+
+但是现在根节点不确定，因此我们需要 $\mathcal O(n)$ 来枚举根节点。
+
+然而这样时间复杂度就来到了 $\mathcal O\left(n^2\right)$，考虑到 $1\leq n\leq 10^6$，无法通过此题。
+
+***
+
+如图：
+
+![](/img/2025/01/026.png)
+
+假设原来的根节点是 $x$，对于 $x$ 的每一个子节点 $y$，其作为根时**子树内**深度之和 $dp_x,dp_y$ 应当满足：
+
+$$
+\begin{aligned}
+dp_y&=dp_x+size_z-size_y\\
+&=dp_x+(n-size_y)-size_y\\
+&=dp_x+n-2\times size_y
+\end{aligned}
+$$
+
+其中，$size_z$ 表示 $x$ 的子树内除 $y$ 的子树外的大小。
+
+这是因为根节点从 $x$ 换到 $y$ 之后，$y$ 的子树“向上抬升”了一级，剩余部分“下降”了一级。
+
+那么先 $\mathcal O(n)$ 求出 $1$ 为根节点时的答案，然后转移求最大值并输出对应根节点即可。
 
 # AC 代码
 
@@ -106,4 +140,3 @@ int main(){
 	return 0;
 }
 ```
-
