--- a/_posts/2025-01-22-8.md
+++ b/_posts/2025-01-22-8.md
@@ -7,13 +7,41 @@ author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
-  - 未完
   - 题解
   - 普及+/提高
+  - DP
+  - 树型 DP
 words:
+  - 树型DP
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P2986)
+
+# 树型 DP
+
+换根树型 DP。
+
+令 $dis_x$ 表示节点 $x$ 的子树内不方便程度的和。
+
+显然，$dis_x$ 会因为根节点的不同而不同，我们考虑如何转换。
+
+令 $dp_x$ 表示以 $x$ 为根节点时，不方便程度之和。
+
+原来的 $dis_x$ 则是在以 $1$ 为根节点的条件下求得的。
+
+则：
+
+$$
+dp_1=dis_1
+$$
+
+对于节点 $x$ 的子节点 $y$，有：
+$$
+dp_y=dp_x-size_y\times w_{x,y}+(m-size_y)\times w_{x,y}
+$$
+其中，$size_p$ 表示以 $1$ 为根节点的情况下，$p$ 的子树内牛的总数。
+
+根节点从 $x$ 换到 $y$，显然是 $y$ 及其子树抬升了一级，$x$ 及其除 $y$ 以外的子树下降了一级，由此可得上文递推式。
 
 # AC 代码
 
@@ -95,4 +123,3 @@ int main(){
 	return 0;
 }
 ```
-
