--- a/_posts/2025-01-19-1.md
+++ b/_posts/2025-01-19-1.md
@@ -12,6 +12,7 @@ tags:
   - Trie
   - 字符串
   - KMP
+  - 拓扑排序
 words:
   - 题解：【模板】AC 自动机
   - 题解：AC 自动机（简单版）
@@ -132,7 +133,7 @@ KMP 之所以高效，可以理解为是**充分利用了已经匹配的信息**
 
 注意：不存在的“伪”节点不会遍历其子节点，因此复杂度仍然是线性。
 
-## fail 指针“倒树”信息合并
+## 拓扑排序：fail 指针“倒树”信息合并
 
 看图：
 
@@ -144,7 +145,9 @@ KMP 之所以高效，可以理解为是**充分利用了已经匹配的信息**
 
 但是如何保证顺序呢？
 
-上文提到了 fail 指针的构建顺序：BFS 序。此处我们将 BFS 序倒过来来合并即可。
+拓扑排序即可，拓扑排序可以将信息维护变为线性结构。
+
+但其实没有必要再进行一次拓扑排序，因为上文提到了 fail 指针的构建顺序：BFS 序。此处我们将 BFS 序倒过来来合并即可。
 
 这样，整个 fail 指针便构成了一棵“倒树”——每条边都从子节点指向父节点。
 
