--- a/_posts/2025-01-23-6.md
+++ b/_posts/2025-01-23-6.md
@@ -135,7 +135,7 @@ words:
 
 总结一下就可以发现，点双连通分量一定在割点或根节点的子树中。
 
-用一个栈维护节点，那么在找到割点或根节点时，将**其子树内**的店归到一个新的点双即可。
+用一个栈维护节点，那么在找到割点或根节点时，将**其子树内**的点归到一个新的点双即可。
 
 <details class="question" open>
     <summary>如何确保子树内的点一定属于这个点双连通分量</summary>
