--- a/_posts/2024-12-21-2.md
+++ b/_posts/2024-12-21-2.md
@@ -114,6 +114,96 @@ void up(int p){
 
 其实还有一些问题，见下文的[区间推平](#区间推平)。
 
+<details class="note">
+    <summary>关于 $set$ 和 $reverse$ 标记传递的顺序问题</summary>
+    <blockquote>
+        <p>
+            update at $0225/1/25$：转载自<a href="https://www.luogu.com.cn/discuss/1025133" target="_blank">我的回答</a>。
+        </p>
+    </blockquote>
+    <hr>
+    <div style="font-size: 30px;font-weight: 700;">先推平再翻转</div>
+    <p>
+        你可以这么理解为什么先传递推平标记要取消翻转标记：
+    </p>
+    <p>
+        假设有一个区间是 $\texttt{11001}$，那么将其打上翻转标记应当变为：$\texttt{00110}$。但是因为懒标记的原因，可能会变为：$\color{red}\texttt{11}\color{black}\texttt{110}$。红色部分表示因为懒标记而<b>实际上没有被翻转的部分</b>。
+    </p>
+    <p>
+        此时我们再推平整个区间为 $\texttt{00000}$，那么<b>前面两个 $\color{red}\texttt{11}$ 的翻转懒标记仍然存在</b>。
+    </p>
+    <p>
+        于是就会导致整个区间变为 $\color{red}\texttt{00}\color{black}\texttt{000}$，此时你再传递翻转懒标记就会把区间变为 $\texttt{11000}$，就不对了。
+    </p>
+    <p>
+        所以在区间推平的时候要取消翻转标记。
+    </p>
+    <hr>
+    <div style="font-size: 30px;font-weight: 700;">先翻转再推平</div>
+    <p>
+        你当然也可以先传递翻转标记再传递推平标记。但是这样的话就可以不需要取消翻转标记了。（这种<b><i>需要注意标记顺序问题</i></b> ，见下文）
+    </p>
+    <p>
+        因为你翻转之后推平了，无所谓。
+    </p>
+    <p>
+        比如说区间 $\texttt{10101}$，打上翻转标记变成 $\color{red}\texttt{10}\color{black}\texttt{010}$。此时你再推平会先传递翻转标记，整个区间会变成 $\texttt{01010}$，是正确的。然后你再传递推平标记即可。
+    </p>
+    <hr>
+    <div style="font-size: 30px;font-weight: 700;">标记顺序问题</div>
+    <p>
+        其实还涉及到<b>顺序问题</b>。
+    </p>
+    <ul>
+        <li>
+            <p>
+                先推平再翻转
+            </p>
+            <p>
+                你在推平时直接取消翻转标记即可。传递时因为是先传递推平标记，再传递翻转标记，也符合标记的顺序，能够保证答案的正确性。
+            </p>
+        </li>
+        <li>
+            <p>
+                先翻转再推平
+            </p>
+            <p>
+                <s>其实这种我没写过。</s>你在翻转的时候需要先传递推平标记，即将推平标记的传递同时写入 <code>pushdown()</code> 和你的翻转函数。
+            </p>
+            <p>
+                不然就会出现类似于标记先后顺序不对进而导致出错的情况。
+            </p>
+            <p>
+                比如说有一个区间是 $\texttt{10110}$，区间推平为 $\texttt{00000}$，实际变为 $\color{red}\texttt{10}\color{black}\texttt{000}$。
+            </p>
+            <p>
+                此时翻转函数将此区间翻转，就会变成 $\color{red}\texttt{01}\color{black}\texttt{111}$，然后你再传递之前的标记，于是区间就变成了：$\texttt{00111}$，显然不对。（应当变为 $\texttt{11111}$。）
+            </p>
+            <p>
+                上文中之所以是正确的，是因为没有考虑在翻转之前有没有推平标记。
+            </p>
+        </li>
+    </ul>
+    <p>
+        <i><b>总而言之，就是在进行某一操作时，需要先传递另一操作的标记来保证正确性。</b></i>
+    </p>
+    <p>
+        而区间推平的好处就是推平之后无论之前是否翻转，<b>推平之后都一样</b>，因此可以<b>直接取消</b>区间翻转的标记。
+    </p>
+    <hr>
+    <p>
+        所以说题解里大多数都是建议你先传递推平标记再传递翻转标记，因为你推平时取消翻转标记仅仅需要一行：
+    </p>
+    <p>
+     <div class="language-cpp highlighter-rouge"><div class="highlight"><pre class="highlight"><code><div class="table-responsive"><table class="rouge-table table"><tbody><tr><td class="rouge-gutter gl"><pre class="lineno">1
+</pre></td><td class="rouge-code"><pre><span class="n">t</span><span class="p">[</span><span class="n">p</span><span class="p">].</span><span class="n">reverse</span> <span class="o">=</span> <span class="nb">false</span><span class="p">;</span>
+</pre></td></tr></tbody></table></div></code></pre></div></div>
+    </p>
+    <p>
+        但是你先翻转再推平的时候在翻转函数内传递推平标记就会要写一堆（比如说<a href="#参考代码-3">下文我写的 <code>set</code> 函数</a>）。
+    </p>
+</details>
+
 ***
 
 对于赋值，没什么好说的，见代码。
