--- a/_posts/2025-01-22-4.md
+++ b/_posts/2025-01-22-4.md
@@ -7,6 +7,7 @@ author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
+  - 未完
   - 题解
   - 普及+/提高
   - DP
@@ -17,6 +18,12 @@ words:
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P2018)
+>
+> [加强版数据包](/file/2025/01/news.zip)
+>
+> 加强版数据包满足 $2\leq n\leq 200000$。
+>
+> <span style="color:red;">存在 $\mathcal O\left(n\log n\right)$ 做法，未完。</span>
 
 # 题意分析
 
