--- a/_posts/2025-01-24-2.md
+++ b/_posts/2025-01-24-2.md
@@ -21,6 +21,10 @@ words:
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P2444)
+>
+> [加强版数据包](/file/2025/01/virus.zip)
+>
+> 加强版数据包满足病毒代码段总长度不超过 $1000000$，且**绑包**。
 
 # 暴力 $\text{84pts}$ 做法
 
