--- a/_posts/2024-12-21-2.md
+++ b/_posts/2024-12-21-2.md
@@ -202,9 +202,11 @@ void up(int p){
     <p>
         但是你先翻转再推平的时候在翻转函数内传递推平标记就会要写一堆（比如说<a href="#参考代码-3">下文我写的 <code>set</code> 函数</a>）。
     </p>
+    <hr>
+    <p>
+        update at $2025/1/25\ 23:59$：先翻转再推平的话，可以考虑<b>翻转推平标记</b>，这样会简单一些。
+    </p>
 </details>
-
-***
 
 对于赋值，没什么好说的，见代码。
 
