--- a/_posts/2024-12-31-1.md
+++ b/_posts/2024-12-31-1.md
@@ -10,6 +10,8 @@ tags:
   - 随机化
   - 时间戳优化
   - 位运算
+  - bitset
+  - 状态压缩
 words:
   - scanf()
   - printf()
@@ -30,6 +32,8 @@ words:
   - random
   - lg[]
   - 异或
+  - shuffle()
+  - bitset
 ---
 
 # 快读快写
@@ -564,7 +568,9 @@ std::size_t fwrite(const void* buffer, std::size_t size, std::size_t count,std::
 #pragma GCC optimize(2)
 </span></pre></td></tr></tbody></table></div></code></pre></div></div>
 </details>
-## 随机化： `mt19937`
+## 随机化
+
+### `mt19937`
 
 生成随机数可以使用 `rand()`，然而自带的 `rand()` **效率较低且值域较小**。
 
@@ -584,6 +590,20 @@ mt19937 Rand(time(0));
     <p>因此建议加上头文件 <code>random</code> 或使用万能头文件 <code>bits/stdc++.h</code>。</p>
     <p>否则可能就会 $\color{red}\text{CE}$。</p>
 </details>
+### `shuflle`
+
+通过 `shuffle` 可以很容易的打乱一个数组的顺序。同上，建议添加头文件 `<random>`。
+
+使用格式：
+
+```cpp
+shuffle(order.begin(),order.end(),Rand);
+```
+
+`order.begin()` 是数组的起始指针，`order.end()` 是数组的末尾指针，`Rand` 是**随机函数**。
+
+建议将 `Rand` 设置为 `mt19937` 的，效率更高。
+
 ## 对数：`__lg` 与 `lg[i]` 预处理
 
 对于取以 $2$ 为底的对数的时候，我们可以使用 `<cmath>` 库中自带的 `log2` 函数来求解，例如 `log2(5)` 就是 $2.32193$。
@@ -632,6 +652,47 @@ mt19937 Rand(time(0));
    for(int i=1;i<=N;i++)lg[i]=lg[i>>1]+1;
    ```
 
+## 状态压缩：`bitset`
+
+***需要包含头文件 `<bitset>`。***
+
+对于一长串 `bool` 变量，明明只使用了 $1\text{bit}$，但是却占用了 $1$ 字节，非常不合理。
+
+因此我们可以通过 `bitset` 来解决。
+
+`bitset` 来进行状态压缩会将时间复杂度降为原来的 $\dfrac1w$，$w$ 表示计算机字长，通常为 $64$ 或 $32$。
+
+### 使用方法
+
+* 创建
+
+  ```cpp
+  bitset<N+1>p;
+  ```
+
+  创建了一个 $N+1$ 位的 `bitset` $p$。
+
+* 查询 `bitset` 内 $1$ 的个数
+
+  ```cpp
+  p.count();
+  ```
+
+* 将 `bitset` 内第 $i$ 位设置为 $1$
+
+  ```cpp
+  p.set(i);
+  ```
+
+* 位运算
+
+  `bitset` 之间如二进制数般可以进行位运算，位运算的结果仍然是一个 `bitset`。
+
+  如：
+
+  ```cpp
+  (p[i]&p[j]).count();
+  ```
 
 # 常用技巧
 
@@ -640,3 +701,5 @@ mt19937 Rand(time(0));
 可以从 $2$ 开始存储边，无向边的两条有向边相邻，因此可以使用**异或** $1$ 来查找反向边。
 
 [比如这里](/2025/01/23/3/#无向图转有向图存储下环的误判)。
+
+## 
