--- a/_posts/2025-01-22-4.md
+++ b/_posts/2025-01-22-4.md
@@ -21,17 +21,18 @@ words:
 >
 > [加强版数据包](/file/2025/01/news.zip)
 >
-> 加强版数据包满足 $2\leq n\leq 200000$。
+> 加强版数据包满足 $2\leq n\leq 200000$，需要使用 $\mathcal O\left(n\log n\right)$ 做法。
 >
-> <span style="color:red;">存在 $\mathcal O\left(n\log n\right)$ 做法，未完。</span>
 
 # 题意分析
 
 给定一棵无根树，最开始花费 $1$ 时刻可以选择一个节点告知一条消息，每一个时刻每一个已知消息的节点都可以告知其他**一个**节点，求消息传遍整棵树的**最短**时间和最开始能选择的节点有哪些。
 
-# 树型 DP
+## $\mathcal O\left(n^2\log n\right)$ 做法
 
-## 状态设计
+### 树型 DP
+
+#### 状态设计
 
 令 $dp_x$ 表示在从节点 $x$ 开始（不包括），告知整个 $x$ 的子树的最少时间。
 
@@ -41,7 +42,7 @@ words:
 
 但是，我们可以枚举根节点 $i$，那样我们选择节点 $i$ 作为第一个接收到消息的节点，每一次都重新递推一遍 $dp_i$，$dp_i$ 即选择节点 $i$ 的答案，最终取最大值即可。
 
-## 状态转移
+### 状态转移
 
 如何递推呢？
 
@@ -106,7 +107,7 @@ $$
     </p>
 </details>
 
-## 复杂度分析
+### 复杂度分析
 
 枚举根节点：时间复杂度 $\mathcal O(n)$。
 
@@ -118,7 +119,7 @@ $$
 
 故：总时间复杂度为 $\mathcal O\left(n^2\log n\right)$，可以通过此题。
 
-# AC 代码
+### AC 代码
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -199,4 +200,10 @@ int main(){
 	return 0;
 }
 ```
+
+## $\mathcal O\left(n\log n\right)$ 做法
+
+如图：
+
+![](/img/2025/01/040.png)
 
