--- a/_posts/2025-01-21-6.md
+++ b/_posts/2025-01-21-6.md
@@ -12,6 +12,8 @@ tags:
 words:
 ---
 
+# 洛谷难度评级
+
 <span style="color:rgb(254, 76, 97);"><b>入门</b></span>
 
 ```html
@@ -53,6 +55,8 @@ words:
 ```html
 <span style="color:rgb(14, 29, 105);"><b>NOI/NOI+/CTSC</b></span>
 ```
+
+# 内容
 
 <details class="note" open>
     <summary>折叠</summary>
@@ -62,3 +66,48 @@ words:
     </p>
 </details>
 
+## `<details>` 下 html 代码
+
+* **粗体**
+
+  ```html
+  <b>粗体</b>
+  ```
+
+* *斜体*
+
+  ```html
+  <i>斜体</i>
+  ```
+
+* <u>下划线</u>
+
+  ```html
+  <u>下划线</u>
+  ```
+
+* ~~删除线~~
+
+  ```html
+  <s>删除线</s>
+  ```
+
+* 图片
+
+  ```html
+  <img src="">
+  ```
+
+* 分割线
+
+  ```html
+  <hr>
+  ```
+
+* 标题
+
+  `<h1>` 至 `<h6>`，但是不建议。
+
+  建议使用 `style="font-size:30px;font-weight:bolder"` 来代替。
+
+  否则会影响目录。
