--- a/_posts/2025-01-22-4.md
+++ b/_posts/2025-01-22-4.md
@@ -21,8 +21,7 @@ words:
 >
 > [加强版数据包](/file/2025/01/news.zip)
 >
-> 加强版数据包满足 $2\leq n\leq 200000$，需要使用 $\mathcal O\left(n\log n\right)$ 做法。
->
+> 加强版数据包满足 $2\leq n\leq 200000$，**需要使用 $\mathcal O\left(n\log n\right)$ 做法**。
 
 # 题意分析
 
@@ -200,10 +199,3 @@ int main(){
 	return 0;
 }
 ```
-
-## $\mathcal O\left(n\log n\right)$ 做法
-
-如图：
-
-![](/img/2025/01/040.png)
-
