--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -1,17 +1,32 @@
 ---
 layout: post
 title: "组合数学学习笔记"
-subtitle: "排列组合 组合数 二项式定理"
+subtitle: "排列组合"
 date: 2025-2-4
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
+  - 题解
   - 数学
+  - 提高+/省选−
+  - 省选/NOI−
+  - 未完
 words:
+  - 卢卡斯定理 Lucas 定理
+  - 扩展卢卡斯定理 exLucas 定理
+  - 二项式定理
+  - 二项式推论
+  - 加法原理
+  - 乘法原理
+  - 加乘原理
+  - 球盒问题
+  - 生成函数
+  - 题解：洛谷P3807
+  - 题解：卢卡斯定理/Lucas 定理
 ---
 
-> [参考资料](/file/2025/02/组合数学25年竞赛.zip)
+> [参考资料](/file/2025/02/组合数学25年竞赛.zip) [参考资料](/file/2025/02/组合数学修订.zip) [参考资料](/file/2025/02/数学.pdf)
 
 # 排列与组合
 
@@ -47,13 +62,13 @@ words:
 
 * 隔板法：用于确定不定方程解组个数。
 
-* 对立法：考虑事件对立，用类似于反证法解决。
+* 对立法：考虑事件对立，用类似于反证法解决。（[例子](/2025/01/03/2/)）
 
 ## 排列数与组合数
 
 ### 排列数
 
-从 $n$ 个元素中选取 $m$ 个不同的元素，按照一定顺序排成一列，称为排列。
+从 $n$ 个元素中不重复地选取 $m$ 个不同的元素，按照一定顺序排成一列，称为排列。
 
 排列是**有序**的。
 
@@ -62,9 +77,11 @@ words:
 从 $n$ 个元素中选取 $m$ 个元素的方案数记作 $P_n^m$（读作 $P\ n\ m$），也可记作 $P(n,m)$ 或 $A_n^m$。
 
 排列的计算公式：
+
 $$
 P_n^m=n(n-1)(n-2)\cdots(n-m+1)=\frac{n!}{(n-m)!}
 $$
+
 很好理解，选取一个就少一个。
 
 #### 圆排列
@@ -80,9 +97,11 @@ $$
 考虑到这样会有 $m$ 个重复的，因此答案要除以 $m$。
 
 圆排列下，排列的计算公式为：
+
 $$
 Q_n^m=\frac{n!}{m(n-m)!}
 $$
+
 注：圆排列使用 $Q$。
 
 #### 全排列
@@ -90,25 +109,582 @@ $$
 在 $n$ 个元素中选取 $n$ 个元素。
 
 答案为：
+
 $$
 P_n^n=\frac{n!}{0!}=n!
 $$
+
 圆排列时，答案为：
+
 $$
 P_n^n=\frac{n!}{n}=(n-1)!
 $$
 
 ### 组合数
 
-从 $n$ 个元素中选取 $m$ 个不同的元素，组成一个集合，称为一种组合。
+从 $n$ 个元素中不重复地选取 $m$ 个不同的元素，组成一个集合，称为一种组合。
 
 组合是**无序**的。
 
 与上文相反，选取 $\{1,2,3\}$ 和选取 $\{1,3,2\}$ 就是同一种组合。
 
-从 $n$ 个元素中选取 $m$ 个元素的方案数记作 $(_m^n)$，也可记作 $C(n,m)$ 或 $C_n^m$。
+从 $n$ 个元素中选取 $m$ 个元素的方案数记作 $\dbinom{n}{m}$，读作“$n$ 选 $m$”，也可记作 $C(n,m)$ 或 $C_n^m$，读作“$C\ n\ m$”。
 
 组合的计算公式为：
-$$
 
 $$
+\binom{n}{m}=\frac{P_n^m}{m!}=\frac{n!}{m!(n-m)!}
+$$
+
+<details class="note">
+    <summary>组合数的 $\KaTeX$ 输入</summary>
+    <p>
+        使用 <code>\binom{n}{m}</code> 或 <code>{n\choose m}</code> 来输入 $\binom{n}{m}$。
+    </p>
+    <p>
+        后一种<b>一定</b>需要加 <code>{}</code> 来保证不会出现错误。
+    </p>
+    <p>
+        对于 <code>\binom</code>，可以像 <code>\dfrac</code> 一样使用 <code>\dbinom</code>。
+    </p>
+</details>
+
+理解起来也不难，相同的 $m$ 个元素总共有 $m!$ 种排列，属于一种组合。
+
+#### 允许重复的组合
+
+从一个大小为 $n$ 的集合中取 $m$ 个元素，**可以重复取**，求有多少种方案。
+
+方案数为：
+
+$$
+\binom{n+m-1}{m}
+$$
+
+证明：
+
+不妨令集合有序，元素为 $s_1,s_2,s_3,\cdots,s_n$。
+
+令取走的 $m$ 个元素为 $\large s_{a_1},s_{a_2},s_{a_3},\cdots,s_{a_m}$，则有：
+
+$$
+a_1\leq a_2\leq a_3\leq \cdots\leq a_m
+$$
+
+则：
+
+$$
+a_1<a_2+1<a_3+2<\cdots<a_m+(m-1)
+$$
+
+因此我们可以在原集合上构造一个新的集合，使得元素一一对应。
+
+最终集合内总元素个数即 $n+(m-1)=n+m-1$。
+
+则原问题等价于从 $n+m-1$ 个元素中不重复地取 $m$ 个元素。
+
+#### 不相邻组合
+
+从一个大小为 $n$ 的集合中不重复地取 $m$ 个不同元素，**要求选取的元素互不相邻**，求有多少种方案。
+
+方案数为：
+
+$$
+\binom{n-m+1}{m}
+$$
+
+证明：
+
+不妨令集合有序，元素为 $s_1,s_2,s_3,\cdots,s_n$。
+
+令取走的 $m$ 个元素为 $\large s_{a_1},s_{a_2},s_{a_3},\cdots,s_{a_m}$，则有：
+
+$$
+a_1<a_2-1<a_3-2<\cdots<a_m-(m-1)
+$$
+
+与上文同理，可以构造一个新集合与原集合内元素一一对应。
+
+最终集合内总元素个数即 $n-(m-1)=n-m+1$。
+
+则原问题等价于从 $n-m+1$ 个元素中不重复地取 $m$ 个元素。
+
+#### 球盒问题
+
+一类经典问题。
+
+将 $n$ 个球放入 $m$ 个盒子，求方案数。
+
+八种经典组合：
+
+* 球：是否有区别
+* 盒：是否有区别
+* 盒：是否能为空
+
+| 球有无区别 | 盒有无区别 | 盒能否为空 | 方案数 | 注释 |
+| :-----: | :----: | :-----: | :-----: | :-----: |
+| 有 | 有 |能|$m^n$| 每个球都有 $m$ 种选择 |
+| 有 | 有 |否||  |
+| 有 | 无 |能||  |
+| 有 | 无 |否||  |
+| 无 | 有 |能|$\dbinom{n+m-1}{n}$| 从 $m$ 个盒中选择 $n$ 个，可重复 |
+| 无 | 有 |否|$\dbinom{n-1}{m-1}$| 插空法：$n$ 个球摆好，将 $m-1$ 个挡板插入 $n-1$ 个空即可 |
+| 无 | 无 |能||  |
+| 无 | 无 |否||  |
+
+#### 组合数的性质与求解
+
+1. $$
+   \binom{n}{m}=\binom{n}{n-m}
+   $$
+   
+   <details class="note">
+       <summary>证明</summary>
+       <p>
+           从 $n$ 个元素中取 $m$ 个元素，选择的方案数与没被选择的方案数相同。
+       </p>
+       <p>
+           换而言之，选择 $m$ 个元素的方案数等于选择剩下没被选择的 $n-m$ 个元素的方案数。
+       </p>
+   </details>
+   
+2. $$
+   \binom{n}{m}=\frac{n}{m}\binom{n-1}{m-1}
+   $$
+
+   <details class="note">
+       <summary>证明</summary>
+       <p>
+           代入公式即可。
+       </p>
+       <p>
+           $$
+           \binom{n}{m}=\frac{n!}{m!(n-m)!}=\frac{n}{m}\times\frac{(n-1)!}{(m-1)!(n-m)!}=\frac{n}{m}\binom{n-1}{m-1}
+           $$
+       </p>
+   </details>
+
+3. $$
+   \binom{n}{m}=\binom{n-1}{m}+\binom{n-1}{m-1}
+   $$
+
+   <details class="note">
+       <summary>证明</summary>
+       <p>
+           代数证法：代入公式即可。
+       </p>
+       <hr>
+       <p>
+           组合数证法：
+       </p>
+       <p>
+           从 $n$ 个元素中取 $m$ 个元素，考虑元素 $a$ 选与不选时的方案。
+       </p>
+       <p>
+           当元素 $a$ 不选时，方案数即从剩下 $n-1$ 个元素中选 $m$ 个元素的方案数。
+       </p>
+       <p>
+           当元素 $a$ 选时，方案数即从剩下 $n-1$ 个元素中选 $m-1$ 个元素的方案数。
+       </p>
+       <p>
+           总方案数即两者相加。
+       </p>
+   </details>
+   
+   这也说明了一件事：可以通过**杨辉三角**求解组合数。
+   
+   事实上，杨辉三角的第 $i$ 行第 $j$ 列就是 $\dbinom{i-1}{j-1}$。
+   
+   如图：
+   
+   ![](/img/2025/02/003.png)
+   
+4. $$
+   \binom{n}{m+1}=\frac{n-m}{m+1}\binom{n}{m}
+   $$
+
+   展开公式可证。
+
+   用于 $\mathcal O(n)$ 递推 $\dbinom{n}{i}$。
+
+#### 重数优化
+
+注：这是在进行高精度操作时的优化，因为高精除麻烦。
+
+<details class="note" open>
+    <summary>重数的定义</summary>
+    <p>
+        对于一个数 $n$，其关于 $p$ 的重数表示其因数中 $p$ 的个数。
+    </p>
+    <p>
+        对于质数 $p$，即质因子中 $p$ 的个数。
+    </p>
+</details>
+
+在进行组合数运算时，常常会遇到**除法**。
+
+而出发效率低下，因此想办法避免。
+
+定义数组 $c$，$c_i$ 表示 $i$ 关于 $n!$ 的重数。
+
+那么就有：
+$$
+\large c_i=\left\lfloor\frac np\right\rfloor
++\left\lfloor\frac n{p^2}\right\rfloor
++\left\lfloor\frac n{p^3}\right\rfloor
++\cdots
++\left\lfloor\frac n{p^{\lfloor\log_p n\rfloor}}\right\rfloor
+$$
+处理时，操作 $c_i$ 即可。
+
+最终答案即 $\sum\limits_{i=1}^kc_i\times i$。
+
+#### 组合数取模
+
+当模数为质数的时候计算逆元将除法改乘法后求解即可。
+
+其他方法见下文 [卢卡斯定理 Lucas 定理](#卢卡斯定理 Lucas 定理) 和 [扩展卢卡斯定理 exLucas 定理](#扩展卢卡斯定理 exLucas 定理)。
+
+### 排列或组合不存在
+
+从 $n$ 个元素中选择 $m$ 个元素，若 $m>n$ 则不存在方案。
+
+即：当 $m>n$ 时，满足 $\dbinom{n}{m}=P_m^n=0$。
+
+## 二项式定理
+
+二项式定理描述的是一个展开式：
+
+$$
+\large (a+b)^n=\sum_{i=0}^n\binom{n}{i}a^{n-i}b^i
+$$
+
+<details class="note">
+    <summary>$a,b$ 的项数顺序不影响答案</summary>
+    <p>
+        因为 $\binom{n}{i}=\binom{n}{n-i}$。因此对于每一个 $i$，都存在一个 $i'=n-i$ 满足 $a^{i}b^{i'},a^{i'}b^i$ 存在，交换顺序不影响答案。
+    </p>
+    <p>
+        唯一的例外是当 $n$ 为奇数时，会存在一个元素没有“配对”元素，但这也不影响，因为那必定是 $\frac12(n+1)$，$a,b$ 的项数相同。
+    </p>
+</details>
+
+### 二项式推论
+
+* $$
+  \binom{n}{0}+\binom{n}{1}+\binom{n}{2}+\cdots+\binom{n}{n}=\sum_{i=0}^n\binom{n}{i}=2^n
+  $$
+
+  取 $a=b=1$ 代入即可。
+
+* $$
+  \sum_{i=0}^n(-1)^i\binom{n}{i}=[n=0]
+  $$
+
+  其中 $[n=0]$ 为**艾弗森括号**，表示条件是否成立，$n=0$ 成立时为 $1$，否则为 $0$。
+
+  令 $a=1,b=-1$ 即可。
+
+* $$
+  \sum_{i=0}^ni\binom{n}{i}=n\times 2^{n-1}
+  $$
+
+  令 $a=x,b=1$，两边求导后有 $x=1$。
+
+  ~~虽然我并不会求导。~~
+
+* $$
+  \sum_{i=0}^ni^2\binom{n}{i}=n(n+1)2^{n-2}
+  $$
+
+  同上。
+
+  ~~显然我还是不会证明。~~
+
+* $$
+  \sum_{i=0}^m\binom{n}{i}\binom{m}{k-i}=\binom{m+n}{k}
+  $$
+
+  **范德蒙恒等式**。
+
+  代入组合数计算公式展开可证。
+
+  其推论：
+  $$
+  \sum_{i=0}^n\binom{n}{i}^2=\binom{2n}{n}
+  $$
+  令 $n=k=m$ 即可。
+
+* $$
+  \sum_{i=0}^n\binom{i}{k}=\binom{n+1}{k+1}
+  $$
+
+  **朱世杰恒等式**。
+
+  考虑集合 $S=\{a_1,a_2,a_3,\cdots,a_{n+1}\}$ 的 $k+1$ 子集数可证。
+
+  ~~我还是不会。~~
+
+* $$
+  \binom{n}{r}\binom{r}{k}=\binom{n}{k}\binom{n-k}{r-k}
+  $$
+
+  代入公式展开可证。
+
+* $$
+  \sum_{i=0}^n\binom{n-i}{i}=F_{n+1}
+  $$
+
+   $F$ 为**斐波那契数列**。
+
+  ~~不会证。~~
+
+* $$
+  \binom{n+k}{k}^2=\sum_{j=0}^k\binom{k}{j}^2\binom{n+2k-j}{2k}
+  $$
+
+  通过范德蒙恒等式可证，被称为**李善兰恒等式**。
+
+  ~~还是不会证。~~
+
+## 卢卡斯定理 Lucas 定理
+
+**Lucas 定理用于求解大组合数取质数模的问题。**
+
+当模数 $p$ 为质数时，有：
+
+$$
+\binom{n}{m}\equiv\binom{\left\lfloor n\div p\right\rfloor}{\left\lfloor m\div p\right\rfloor}\binom{n\bmod p}{m\bmod p}\pmod p
+$$
+
+观察上式，$\dbinom{\left\lfloor n\div p\right\rfloor}{\left\lfloor m\div p\right\rfloor}$ 可以继续递归使用 Lucas 定理求解，而 $\dbinom{n\bmod p}{m\bmod p}$ 可以直接求解。
+
+但是这也就导致使用 Lucas 定理时，模数 $p$ 的范围**不能太大**，一般在 $10^5$ 级别，如 $10^5+3$。
+
+时间复杂度：$\mathcal O(f(p)+g(n)\log n)$。
+
+其中 $f(p)$ 为（预）处理组合数的复杂度，$g(n)$ 为单次求组合数的复杂度。
+
+递归边界：$m=0$ 时，此时答案显然为 $1$。
+
+<details class="note" open>
+    <summary>关于“（预）处理”</summary>
+    <p>
+        当模数 $p$ 的级别达到 $10^4$ 级时，一般来讲就已经不能预处理了。
+    </p>
+    <p>
+        先是时间复杂度 $\mathcal O(p^2)$，更何况空间复杂度也是 $\mathcal O(p^2)$ 的，$10^4$ 之上的级别再预处理直接炸掉。
+    </p>
+</details>
+
+### 证明
+
+由二项式定理：
+
+$$
+(a+b)^p=\sum_{i=0}^p\binom{p}{i}a^{p-i}b^i
+$$
+
+那么我们考虑 $\dbinom{p}{i}$ **在模 $p$ 意义下**的取值（$0\leq i\leq p$）。
+
+因为 $\dbinom{p}{i}=\frac{p!}{i!(p-i)!}$，而 $i\leq p$，因此模 $p$ 后只有在 $i=0$ 或 $i=p$ 时可以约分约掉 $p$ 项，计算可得约分之后均为 $1$。
+
+而在其他时候，因为分母中不含 $p$ 项，分子中含 $p$ 项，因此计算逆元相乘后为 $p$ 的倍数，模 $p$ 后为 $0$。
+
+也就是说：
+
+$$
+\binom{p}{i}\equiv [i=0 \lor i=p]\pmod p
+$$
+
+代入，则有：
+
+$$
+\large
+\begin{aligned}
+(a+b)^p &\equiv \sum_{i=0}^p[i=0 \lor i=p]a^{p-i}b^i\\
+&\equiv a^{p-0}b^0+a^{p-p}b^p\\
+&\equiv a^p+b^p
+\end{aligned}
+\pmod p
+$$
+
+考虑二项式 $(1+x)^n\bmod p$，有：
+
+$$
+\large
+\begin{aligned}
+(1+x)^n&\equiv (1+x)^{p\times \left\lfloor\frac np\right\rfloor}(1+x)^{n\bmod p}\\
+&\equiv (1+x^p)^{\left\lfloor\frac np\right\rfloor}(1+x)^{n\bmod p}\\
+\end{aligned}
+\pmod p
+$$
+
+我们需要求解的答案 $\dbinom{n}{m}$ 即 $(1+x)^n$ 展开式的 $x^m$ 次项系数，因此 $x^m$ 次项需要从 $\large (1+x^p)^{\left\lfloor\frac np\right\rfloor}$ 中取 $\left\lfloor\frac mp\right\rfloor$ 个 $x^p$，从 $(1+x)^{n\bmod p}$ 中取 $m\bmod p$ 个 $x$ 得到，即：
+
+$$
+\binom{n}{m}\equiv\binom{\left\lfloor n\div p\right\rfloor}{\left\lfloor m\div p\right\rfloor}\binom{n\bmod p}{m\bmod p}\pmod p
+$$
+
+### [例题：洛谷PP3807](https://www.luogu.com.cn/problem/P3807)
+
+很简单，注意是 $\dbinom{n+m}{n}$ 即可。
+
+参考代码：
+
+```cpp
+#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+const int N=1e5;
+int ksm(int a,int n,int p){
+	if(n==0)return 1;
+	int t=ksm(a,n>>1,p);
+	t=1ll*t*t%p;
+	if(n&1)t=1ll*t*a%p;
+	return t;
+}
+int C(int n,int m,int p){
+	static int ans[N+1]={1};
+	for(int i=1;i<=m;i++){
+		ans[i]=1ll*ans[i-1]*(n-i+1)%p*ksm(i,p-2,p)%p;
+	}return ans[m];
+}
+int Lucas(int n,int m,int p){
+	if(m==0)return 1;
+	return (1ll*Lucas(n/p,m/p,p)*C(n%p,m%p,p))%p;
+}
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	int T,n,m,p;
+	scanf("%d",&T);
+	while(T--){
+		scanf("%d %d %d",&n,&m,&p);
+		printf("%d\n",Lucas(n+m,n,p));
+	}
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+
+## 扩展卢卡斯定理 exLucas 定理
+
+~~虽然我很想说这是个算法不是定理。。。~~
+
+当模数 $p$ 为合数不为质数时，Lucas 定理不再适用，可以使用 exLucas 定理来解决。
+
+求 $\dbinom{n}{m}\bmod P$，$P$ 可能为合数。
+
+### 1.中国剩余定理
+
+先将 $P$ 进行质因数分解：$P=\prod\limits_{i=1}^kp_i^{c_i}$，其中 $p_i$ 为质数。
+
+对于 $i\ne j$，总有 $\gcd\left(tp_i^{c_i},p_j^{c_j}\right)=1$，所以可以**构造**如下 $k$ 个**同余方程**：
+
+$$
+\left\{
+\begin{aligned}
+a_1&\equiv \binom{n}{m}\pmod{p_1^{c_1}}\\
+a_2&\equiv \binom{n}{m}\pmod{p_2^{c_2}}\\
+a_3&\equiv \binom{n}{m}\pmod{p_3^{c_3}}\\
+&\ \ \ \ \ \ \ \ \ \ \ \ \ \ \cdots\\
+a_k&\equiv \binom{n}{m}\pmod{p_k^{c_k}}
+\end{aligned}
+\right.
+$$
+
+当我们求出 $a_1,a_2,a_3,\cdots,a_k$ 后，就可以通过[中国剩余定理](/2025/02/05/1/#中国剩余定理)来求出 $\Large \binom{n}{m}$。
+
+### 2.移除分子分母中的质数
+
+因为同余，因此不妨令 $a_i={\dbinom{n}{m}}\bmod p_i^{c_i}$。
+
+代入组合数计算公式，得：
+
+$$
+\large a_i=\frac{n!}{m!(n-m)!}\bmod p_i^{c_i}
+$$
+
+存在除法，模意义下**需要求逆元**。
+
+然而分母 $m!(n-m)!$ 不一定与 $p_i^{c_i}$ 互质，因此我们需要先提取出 $m!(n-m)!$ 中所有的质因数 $p_i$。
+
+原式转化为：
+
+$$
+\Large a_i=\frac{\frac{n!}{p_i^x}}{\frac{m!}{p_i^y}\times \frac{(n-m)!}{p_i^z}}\times p_i^{x-y-z}\bmod p_i^{c_i}
+$$
+
+其中，$x$ 表示 $n!$ 的 $p_i$ 因子的个数，$y$ 表示 $m!$ 的 $p_i$ 因子的个数，$z$ 表示 $(n-m)!$ 的 $p_i$ 因子的个数。
+
+再次转换：
+
+$$
+\Large a_i=p_i^{x-y-z}\times\frac{\frac{n!}{p_i^x}\bmod p_i^{c_i}}{\frac{m!}{p_i^y}\bmod p_i^{c_i}\times \frac{(n-m)!}{p_i^z}\bmod p_i^{c_i}}
+$$
+
+那么，我们就是需要求**三次**形如 $\dfrac{n!}{p_i^x}\bmod p_i^{c_i}$ 的问题，然后组合在一起成为答案。
+
+为了便于表述，记 $p_i=q,c_i=x$。
+
+记 $S(n)$ 为 $n!$ 提取出所有质因子 $q$ 后的值。即 $x=\left\lfloor\dfrac nq\right\rfloor,S(n)=\dfrac{n!}{q^x}$。
+
+则需要求的问题形如：
+
+$$
+S(n)\bmod q^k
+$$
+
+**<span style="color:red;">注意此处的 $n$ 不是上文组合数中的 $n$。</span>**
+
+### 3.Wilson 定理的推论
+
+考虑到：
+
+$$
+\begin{aligned}
+n!&=1\times 2\times 3\times\cdots\times n\\
+&=\left(q\times 2q\times 3q\times \cdots\times q\left\lfloor{\frac nq}\right\rfloor\right)\left(1\times 2\times 3\times \cdots\right)\\
+&=\prod_{i=1}^{\left\lfloor\frac nq\right\rfloor}q\times \prod_{i=1,q \nmid i}^ni\\
+&=q\times \left\lfloor\frac nq\right\rfloor!\times \prod_{i=1,q \nmid i}^ni
+\end{aligned}
+$$
+
+因此有：
+
+$$
+S(n)\equiv S\left(\left\lfloor\frac nq\right\rfloor\right)\times \left(\prod_{i=1,q\nmid i}^{q^k}i\right)^{\large \left\lfloor\frac{n}{q^k}\right\rfloor}\times \prod_{i=1,q\nmid i}^{n\bmod q^k}i
+\pmod {q^k}
+$$
+对于 $S\left(\left\lfloor\frac nq\right\rfloor\right)$，显然可以递归，后面两项暴力计算即可。
+
+对于中间一项，可以使用 Wilson 定理的推广。
+
+记 $(n!)_p$ 为 $1\sim n$ 中不被 $p$ 整除的数的乘积。
+
+显然：
+$$
+\left(\prod_{i=1,q\nmid i}^{q^k}i\right)^{\large \left\lfloor\frac{n}{q^k}\right\rfloor}
+=
+\left((n!)_p\right)^{\large \left\lfloor\frac{n}{q^k}\right\rfloor}
+$$
+
+
+# 母函数与递推关系
+
